--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon dist/index.js"
   },
   "type": "module",
   "repository": {
@@ -16,5 +17,14 @@
   "bugs": {
     "url": "https://github.com/metreniuk/code-checker/issues"
   },
-  "homepage": "https://github.com/metreniuk/code-checker#readme"
+  "homepage": "https://github.com/metreniuk/code-checker#readme",
+  "dependencies": {
+    "@babel/parser": "^7.6.0",
+    "@babel/traverse": "^7.6.0",
+    "@types/babel__traverse": "^7.0.7",
+    "nodemon": "^1.19.2"
+  },
+  "devDependencies": {
+    "@babel/types": "^7.6.1"
+  }
 }
